# clothoid

./: .gitignore  CMakeLists.txt  Gauss-Legendre.sage  README.md  clothoid.h  clothoid.sage  gauss-legendre.h  main.cpp  plot.py
include/: clothoid.h  common.h  distance.h  gauss-legendre.h  shape.h  vec2.h
